--- a/src/components/DisplayInfo.scss
+++ b/src/components/DisplayInfo.scss
@@ -1,5 +1,9 @@
 .displayInfoContainer {
 
+    img{
+        width: 400px;
+        height: 400px;
+    }
     .red {
         color: purple;
     }
